--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.1.0",
     "@types/node": "20.11.16",
     "@types/react": "18.2.52",
@@ -16,13 +17,15 @@
     "autoprefixer": "10.4.17",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
-    "next": "14.1.0",
+    "next": "13.4",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^7.2.3",
+    "react-hook-form": "^7.50.0",
+    "react-redux": "^8.1.0",
     "redux": "^5.0.1",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "yup": "^1.3.3"
   }
 }
